# dbx-paginated-reporting

./: .gitignore  README.md  SSR-ALTERNATIVES.md  databricks.yml
.cursor/instructions/: instructions.md
.cursor/rules/: back-end.mdc  front-end-back-end.mdc  front-end.mdc
.gitlab/: .gitlab-ci.yml
back-end/: .env.example  .gitignore  app.py  pyproject.toml  requirements.txt
back-end/common/: authorization.py  config.py  exceptions.py  filenames.py  logger.py
back-end/common/authentication/: __init__.py  lakebase.py  sql.py  workspace.py
back-end/common/connectors/: __init__.py  lakebase.py  model_serving.py  sql.py  workspace.py
back-end/common/email/: __init__.py  _secret.py  base.py  factory.py  sender.py
back-end/common/email/providers/: sendgrid.py  smtp.py
back-end/common/factories/: __init__.py  app.py  cache.py  lakebase.py  scheduler.py
back-end/migrations/: __init__.py
back-end/models/: __init__.py  agent.py  chat.py  databasehealth.py  email_send_list.py  image.py  me.py  project.py  schedule.py  smtp_connection.py  structure.py  template.py
back-end/repositories/: __init__.py  email_send_lists.py  images.py  projects.py  schedules.py  smtp_connections.py  structures.py  templates.py
back-end/routes/v1/: __init__.py  agent.py  databasehealthcheck.py  discovery.py  email_send_lists.py  healthcheck.py  images.py  me.py  projects.py  schedules.py  smtp_connections.py  structures.py  templates.py
back-end/services/: __init__.py  agent.py  data_query.py  discovery.py  prompt_builder.py  query_builder.py  report_renderer.py
back-end/static/: index.html
back-end/static/assets/: CronDescription.vue_vue_type_script_setup_true_lang-B8y1ndYk.js  CronDescription.vue_vue_type_script_setup_true_lang-BhjpjXl-.js  CronDescription.vue_vue_type_script_setup_true_lang-Bnja2OF5.js  CronDescription.vue_vue_type_script_setup_true_lang-BtQWYUMX.js  CronDescription.vue_vue_type_script_setup_true_lang-CWGLNq-S.js  CronDescription.vue_vue_type_script_setup_true_lang-Cxc3_M_B.js  CronDescription.vue_vue_type_script_setup_true_lang-D1UOmAx2.js  CronDescription.vue_vue_type_script_setup_true_lang-DJQRItKB.js  CronDescription.vue_vue_type_script_setup_true_lang-DXDy5U8k.js  CronDescription.vue_vue_type_script_setup_true_lang-Dn5QUEEQ.js  CronDescription.vue_vue_type_script_setup_true_lang-EOyMhDdC.js  CronDescription.vue_vue_type_script_setup_true_lang-GublDB7V.js  DataStructuresView-9AE_m9uP.js  DataStructuresView-A4DIsRwq.js  DataStructuresView-BCCcLBZb.js  DataStructuresView-BXTUK09s.js  DataStructuresView-CIsUWNQ6.css  DataStructuresView-CQipia42.js  DataStructuresView-CpfEyzP9.js  DataStructuresView-CxYdvTX4.js  DataStructuresView-D7RmS7WE.js  DataStructuresView-DQ4G-eQN.js  DataStructuresView-DShfvdUi.css  DataStructuresView-DbN1Sdfe.js  DataStructuresView-DmcvlPdH.js  DataStructuresView-kfFGBTIB.js  DataStructuresView-xy4NloSu.js  DataStructuresView-zdENtmDs.js  GuideView-B4flTOtT.js  GuideView-B6xB6rYB.js  GuideView-B8n4BWqN.js  GuideView-BU9hqm6W.js  GuideView-Bfb8OubU.js  GuideView-BftbS6j9.js  GuideView-Bii0sWna.js  GuideView-BrZVXzeQ.css  GuideView-BuzzKhMJ.js  GuideView-C0R1wNZ-.css  GuideView-C8NCdJKv.css  GuideView-CjoYHMki.js  (+167 more)
back-end/tests/: conftest.py
back-end/tests/fixtures/: kpi_synthetic_template.html  supplier_template.html  synthetic_data.py
back-end/tests/integration/routes/: test_agent.py  test_discovery.py  test_email_send_lists.py  test_healthcheck.py  test_images.py  test_me.py  test_projects.py  test_schedules.py  test_smtp_connections.py  test_structures.py  test_templates.py
back-end/tests/unit/: test_authorization.py
back-end/tests/unit/models/: test_image_models.py  test_models.py  test_project_models.py  test_schedule_models.py  test_smtp_email_models.py
back-end/tests/unit/repositories/: test_email_send_lists_repository.py  test_images_repository.py  test_projects_repository.py  test_schedules_repository.py  test_smtp_connections_repository.py  test_structures_repository.py  test_templates_repository.py
back-end/tests/unit/services/: test_data_query.py  test_discovery.py  test_email_sender.py  test_prompt_builder.py  test_query_builder.py  test_report_renderer.py
examples/: gold_view.sql  template.html
front-end/: .gitignore  index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
(+27 files in other folders)
