
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-paginated-reporting"
version = "0.0.1"
dependencies = [
    "databricks-sdk==0.88.0",
    "databricks-sql-connector[pyarrow]==4.2.5",
    "fastapi[standard]==0.115.12",
    "fastapi-cli==0.0.7",
    "APScheduler==3.11.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "python-dotenv>=1.0.0",
    "greenlet>=2.0.0",
    "aiocache==0.12.3",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the root directory