
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-paginated-reporting"
version = "0.0.1"
requires-python = ">=3.13"

# Every package in the resolved graph is pinned to an exact version (==).
# This is a deliberate supply-chain hardening measure: any change to the
# dependency set — direct or transitive — must be a reviewed diff.
# Direct deps come first (with their extras), followed by the transitive
# closure. To upgrade a package, edit the pin here, then run `uv lock`.
# svglib is pinned to <1.6 specifically because 1.6+ pulls rlpycairo →
# pycairo, which dynamically links to system libcairo and breaks on
# Databricks Apps serverless (no apt-get).
dependencies = [
    # Direct dependencies (keep extras explicit)
    "APScheduler==3.11.0",
    "aiocache==0.12.3",
    "altair[save]==6.0.0",
    "asyncpg==0.30.0",
    "chevron==0.14.0",
    "css-inline==0.20.1",
    "databricks-sdk==0.102.0",
    "databricks-sql-connector[pyarrow]==4.2.5",
    "fastapi[standard]==0.115.12",
    "fastapi-cli==0.0.7",
    "greenlet==3.2.4",
    "markdown2==2.5.5",
    "python-dotenv==1.0.0",
    "reportlab==4.5.0",
    "requests==2.32.5",
    "sendgrid==6.12.5",
    "SQLAlchemy==2.0.43",
    "svglib==1.5.1",
    "xhtml2pdf==0.2.17",
    # Transitive dependencies (pinned for supply-chain hardening)
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "arabic-reshaper==3.0.1",
    "asn1crypto==1.5.1",
    "attrs==26.1.0",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "colorama==0.4.6",
    "cryptography==48.0.0",
    "cssselect2==0.9.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "google-auth==2.52.0",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.13",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "lxml==6.1.0",
    "lz4==4.4.5",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "narwhals==2.20.0",
    "numpy==2.4.4",
    "oauthlib==3.3.1",
    "openpyxl==3.1.5",
    "oscrypto==1.3.0",
    "packaging==26.2",
    "pandas==2.3.3",
    "pillow==12.2.0",
    "protobuf==6.33.6",
    "pyarrow==24.0.0",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pybreaker==1.4.1",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyhanko==0.35.1",
    "pyhanko-certvalidator==0.31.1",
    "pyjwt==2.12.1",
    "pypdf==6.10.2",
    "python-bidi==0.6.9",
    "python-dateutil==2.9.0.post0",
    "python-http-client==3.3.7",
    "python-multipart==0.0.27",
    "pytz==2026.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "rich==15.0.0",
    "rich-toolkit==0.19.7",
    "rpds-py==0.30.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "starlette==0.46.2",
    "thrift==0.20.0",
    "tinycss2==1.5.1",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "tzlocal==5.3.1",
    "uritools==6.1.0",
    "urllib3==2.7.0",
    "uvicorn==0.46.0",
    "uvloop==0.22.1",
    "vl-convert-python==1.9.0.post1",
    "watchfiles==1.1.1",
    "webencodings==0.5.1",
    "websockets==16.0",
    "werkzeug==3.1.8",
]

[project.optional-dependencies]
test = [
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the root directory
